# Bluebird

./: Makefile.am  README  README.md  TODO  configure.ac  index.theme
bluebird/gtk-2.0/: nautilus.rc  panel.rc
bluebird/xfwm4/: bottom-active.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-inactive.xpm  hide-inactive.xpm  hide-pressed.xpm  left-inactive.xpm  maximize-inactive.xpm  menu-active.xpm  right-inactive.xpm  shade-inactive.xpm  stick-toggled-pressed.xpm  themerc~  title-2-active.xpm  top-left-inactive.xpm  top-right-active.xpm
greybird/gtk-2.0/: gtkrc  panel.rc
greybird/xfwm4/: shade-active.xpm  shade-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  themerc  (+5 more)
gtk-2.0/: bars.rc  gtkrc
gtk-3.0/: README  _colors.scss  _common.scss  _drawing.scss  _mate.scss  _xfce.scss  gtk-bars.css  gtk-contained-dark.css  gtk-contained.css  gtk-contained.scss  gtk-menus.css  gtk-widgets-assets.css  gtk-widgets-borders.css  gtk-widgets.css  gtk.css  gtk.gresource.xml  settings.ini
gtk-3.0.bak/: gtk-widgets-assets.css  gtk-widgets.css  gtk.css
metacity-1/: close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  maximize-active.xpm  menu-inactive.xpm  metacity-theme-1.xml  metacity-theme-2.xml  shade-toggled-prelight.xpm  stick-active.xpm  stick-toggled-active.xpm
xfce-notify-4.0/: gtkrc
xfwm4/: bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-prelight.xpm  left-active.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-pressed.xpm  right-active.xpm  shade-active.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-pressed.xpm  stick-inactive.xpm  stick-prelight.xpm  stick-pressed.xpm  stick-toggled-inactive.xpm  stick-toggled-prelight.xpm  themerc  title-1-active.xpm  title-3-active.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  top-left-active.xpm  top-right-inactive.xpm
(+10 files in other folders)
