AC_INIT([Bluebird ], 0.0, [https://github.com/shimmerproject/Bluebird/issues],
 [Bluebird], [http://shimmerproject.org/our-projects/bluebird/])
AM_INIT_AUTOMAKE([1.11 foreign subdir-objects tar-ustar no-dist-gzip dist-xz -Wno-portability])
AM_SILENT_RULES([yes])

AC_PREFIX_DEFAULT(/usr)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Bluebird
        ========
        prefix:                 ${prefix}

])
